# weather_forecast

./: CMakeLists.txt  LICENSE  autobuild.sh  readme.md  vcpkg.json
src/: main.cpp
src/app/: app_config.hpp  city_manager.cpp  city_manager.hpp  weather_controller.cpp  weather_controller.hpp
src/core/: iweather_provider.hpp  weather_condition.hpp  weather_data.hpp  wttr_weather_provider.cpp  wttr_weather_provider.hpp
src/ui/: city_input_dialog.cpp  city_input_dialog.hpp  weather_animation_widget.cpp  weather_animation_widget.hpp  weather_widget.cpp  weather_widget.hpp
